2024-12-07T01:49:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12208862020 # 502
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-07
* notice: last 14d: unq all: 4 1700
* notice: prev accum: outdated-unq outdated-all / unq all: 2319 234596 / 2337 236372
* notice: next accum: outdated-unq outdated-all / unq all: 2320 234722 / 2338 236497
* notice: prev exec diff / last date diff / accum: unq all: +1 +125 -0 -75 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2024-11-22] / [2024-11-23 2024-12-06 2024-12-07]

2024-12-06T01:50:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12191426257 # 501
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-06
* notice: last 14d: unq all: 4 1701
* notice: prev accum: outdated-unq outdated-all / unq all: 2318 234472 / 2336 236245
* notice: next accum: outdated-unq outdated-all / unq all: 2319 234596 / 2337 236372
* notice: prev exec diff / last date diff / accum: unq all: +1 +127 -0 -75 / +1 +22 -0 -0 / 1 22
* notice: removed / changed dates: [2024-11-21] / [2024-11-22 2024-12-05 2024-12-06]

2024-12-05T01:51:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12171707585 # 500
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-05
* notice: last 14d: unq all: 4 1698
* notice: prev accum: outdated-unq outdated-all / unq all: 2316 234346 / 2334 236123
* notice: next accum: outdated-unq outdated-all / unq all: 2318 234472 / 2336 236245
* notice: prev exec diff / last date diff / accum: unq all: +2 +122 -0 -75 / +1 +20 -0 -0 / 1 20
* notice: removed / changed dates: [2024-11-20] / [2024-11-21 2024-12-04 2024-12-05]

2024-12-04T01:51:39Z: