@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-12-07T01:49:10Z",
-  "count" : 23,
-  "count_minmax" : [ 23, 23 ],
-  "count_decinc" : [ -0, +23 ],
+  "timestamp" : "2024-12-08T01:58:10Z",
+  "count" : 126,
+  "count_minmax" : [ 23, 126 ],
+  "count_decinc" : [ -0, +126 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
