@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-12-07T01:49:10Z",
-  "count_outdated" : 234722,
-  "uniques_outdated" : 2320,
-  "count" : 236497,
-  "uniques" : 2338,
+  "timestamp" : "2024-12-08T01:58:10Z",
+  "count_outdated" : 234850,
+  "uniques_outdated" : 2321,
+  "count" : 236617,
+  "uniques" : 2339,
   "clones" : [
     {
-      "timestamp": "2024-11-23T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 27, 128 ],
-      "count_decinc": [ 75, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-11-24T00:00:00Z",
-      "count": 127,
+      "count": 53,
       "count_minmax": [ 20, 127 ],
-      "count_decinc": [ 0, 127 ],
+      "count_decinc": [ 74, 127 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2024-12-07T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 23 ],
-      "count_decinc": [ 0, 23 ],
+      "count": 126,
+      "count_minmax": [ 23, 126 ],
+      "count_decinc": [ 0, 126 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-08T00:00:00Z",
+      "count": 17,
+      "count_minmax": [ 17, 17 ],
+      "count_decinc": [ 0, 17 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
