@@ -1,15 +1,10 @@
 {
-  "count": 1700,
+  "count": 1693,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2024-11-23T00:00:00Z",
-      "count": 53,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-11-24T00:00:00Z",
-      "count": 127,
+      "count": 53,
       "uniques": 1
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2024-12-07T00:00:00Z",
-      "count": 23,
+      "count": 126,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-08T00:00:00Z",
+      "count": 17,
       "uniques": 1
     }
   ]
