@@ -1,3 +1,12 @@
+2024-12-08T01:58:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12217900320 # 503
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-08
+* notice: last 14d: unq all: 4 1693
+* notice: prev accum: outdated-unq outdated-all / unq all: 2320 234722 / 2338 236497
+* notice: next accum: outdated-unq outdated-all / unq all: 2321 234850 / 2339 236617
+* notice: prev exec diff / last date diff / accum: unq all: +1 +120 -0 -74 / +1 +17 -0 -0 / 1 17
+* notice: removed / changed dates: [2024-11-23] / [2024-11-24 2024-12-07 2024-12-08]
+
 2024-12-07T01:49:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12208862020 # 502
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-07
